# RaeburnAI-Meeting-Intelligence

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/meeting_intelligence/: config.py  integrations.py  intelligence.py  main.py  schemas.py
apps/api/tests/: test_api.py  test_intelligence.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: smoke.test.mjs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_TODOS.md  PRODUCT_SPEC.md  SCREENSHOTS.md
examples/: meeting-request.json
