[project]
name = "raeburnai-meeting-intelligence-api"
version = "0.1.0"
description = "Production-ready meeting intelligence API for decisions, actions, owners and workflow writebacks."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.40",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.28.0",
  "tenacity>=9.1.0",
  "python-dateutil>=2.9.0",
  "structlog>=25.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
  "mypy>=1.16.0",
  "types-python-dateutil>=2.9.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
