[project]
name = "raeburnai-meeting-intelligence-api"
version = "0.1.0"
description = "Production-ready meeting intelligence API for decisions, actions, owners and workflow writebacks."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.116.0",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "sqlalchemy==2.0.41",
  "psycopg[binary]==3.2.9",
  "httpx==0.28.1",
  "tenacity==9.1.2",
  "python-dateutil==2.9.0.post0",
  "structlog==25.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "ruff==0.12.1",
  "mypy==1.16.1",
  "types-python-dateutil==2.9.0.20250516"
]

[project.scripts]
meeting-intelligence-api = "meeting_intelligence.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
